Added the Authors stuff
